[package]
name = "dino-std"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
panic-halt = "0.2.0"

[dependencies.libc]
version = "0.2"
# Disable std feature so this crate works with no_std
default-features = false

[build-dependencies]
cbindgen = "0.9.1"
build-helper = "0.1"
